--- a/assignments/Ch.09.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.09.Exercises-FSDS-MT222.ipynb
@@ -165,7 +165,18 @@
     "\n",
     "def normalise_series(series: pd.Series) -> pd.Series:\n",
     "    \"\"\"Normalises a series using mean and standard deviation\"\"\"\n",
-    "    return (series - series.mean()) / series.std()\n"
+    "    return (series - series.mean()) / series.std()\n",
+    "\n",
+    "\n",
+    "def compare_correlations(corr1: float, corr2: float, n1: int, n2: int) -> Tuple[float, float]:\n",
+    "    \"\"\"Implements Fisher's Z-score comparison. Python implementation adapted from Singer (2022)\"\"\"\n",
+    "    xy_z = 0.5 * np.log((1 + corr1)/(1 - corr1))\n",
+    "    ab_z = 0.5 * np.log((1 + corr2)/(1 - corr2))\n",
+    "    se_diff_r = np.sqrt(1/(n1 - 3) + 1/(n2 - 3))\n",
+    "    diff = xy_z - ab_z\n",
+    "    z = abs(diff / se_diff_r)\n",
+    "    p = (1 - stats.norm.cdf(z)) * 2 # two-tailed test\n",
+    "    return z, p "
    ]
   },
   {
@@ -229,6 +240,7 @@
     "unique_convo_ids = old_data['conversation_id'].unique()\n",
     "\n",
     "\n",
+    "# Collecting all the tweets in the threads (takes a while)\n",
     "convo_list = []\n",
     "metric_list = []\n",
     "conversation_ids = []\n",
@@ -326,22 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7412ce44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_reddit_convos = [clean_text(\" \".join(text[\"body\"] for text in convo)) for convo in reddit_convos]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "cf9a71b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "# Formatting the Reddit data into a dataframe #\n",
+    "clean_reddit_convos = [clean_text(\" \".join(text[\"body\"] for text in convo)) for convo in reddit_convos]\n",
     "mean_convo_score = [np.mean([comment[\"score\"] for comment in convo]) for convo in reddit_convos]\n",
     "reddit_convo = pd.DataFrame({\"text\": clean_reddit_convos, \"score\": mean_convo_score})\n",
     "reddit_convo[\"num_words\"] = reddit_convo[\"text\"].apply(lambda x: len(x.split()))\n",
@@ -419,7 +423,6 @@
    ],
    "source": [
     "\n",
-    "\n",
     "twitter_color = \"#1DA1F2\"\n",
     "reddit_color = \"#FF4500\"\n",
     "long_tweet_convos[\"normalised_popularity\"] = normalise_series(long_tweet_convos[\"popularity_score\"])\n",
@@ -429,7 +432,7 @@
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(111)\n",
     "sns.kdeplot(long_tweet_convos[\"normalised_popularity\"], ax=ax, label=f\"Twitter (N={len(long_tweet_convos)})\", color=twitter_color)\n",
-    "sns.kdeplot(long_reddit_convos[\"normalised_popularity\"], ax=ax, label=f\"Reddit (N={len(long_reddit_convos)}\", color=reddit_color)\n",
+    "sns.kdeplot(long_reddit_convos[\"normalised_popularity\"], ax=ax, label=f\"Reddit (N={len(long_reddit_convos)})\", color=reddit_color)\n",
     "ax.set_xlabel(\"Normalised Popularity Score\")\n",
     "ax.set_ylabel(\"Density\")\n",
     "ax.set_title(\"Normalised Popularity Score Distribution\")\n",
@@ -468,8 +471,8 @@
     "\n",
     "# Plot the two distributions\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "sns.kdeplot(long_tweet_convos[\"readability_score\"], ax=ax, label=\"Twitter\", color=twitter_color)\n",
-    "sns.kdeplot(long_reddit_convos[\"readability_score\"], ax=ax, label=\"Reddit\", color=reddit_color)\n",
+    "sns.kdeplot(long_tweet_convos[\"readability_score\"], ax=ax, label=f\"Twitter (N={len(long_tweet_convos)})\", color=twitter_color)\n",
+    "sns.kdeplot(long_reddit_convos[\"readability_score\"], ax=ax, label=f\"Reddit (N={len(long_reddit_convos)})\", color=reddit_color)\n",
     "ax.set_title(\"Dale-Chall Readability Scores\")\n",
     "ax.set_xlabel(\"Readability Score\")\n",
     "ax.set_ylabel(\"Density\")\n",
@@ -555,15 +558,6 @@
     }
    ],
    "source": [
-    "def compare_correlations(corr1: float, corr2: float, n1: int, n2: int) -> Tuple[float, float]:\n",
-    "    xy_z = 0.5 * np.log((1 + corr1)/(1 - corr1))\n",
-    "    ab_z = 0.5 * np.log((1 + corr2)/(1 - corr2))\n",
-    "\n",
-    "    se_diff_r = np.sqrt(1/(n1 - 3) + 1/(n2 - 3))\n",
-    "    diff = xy_z - ab_z\n",
-    "    z = abs(diff / se_diff_r)\n",
-    "    p = (1 - stats.norm.cdf(z)) * 2 # two-tailed test\n",
-    "    return z, p \n",
     "\n",
     "# calculate the correlation between readability score and popularity score\n",
     "tweet_cor = stats.spearmanr(long_tweet_convos[\"readability_score\"], long_tweet_convos[\"popularity_score\"])\n",
@@ -609,7 +603,7 @@
     "\n",
     "There are several methodological limitations that affect the validity and generalisability of these results. Firstly, I did not account for repeated measures in the analyses. This might have inflated the p-value and reduced the power of the analysis (Sainani, 2010). However, the design of the study made it difficult to define repeated measures as the analysis was on a thread-level. Multiple users participated in these threads making identity difficult. Furthermore, some users might have been present in both datasets under different pseudonyms further complicating the analysis. Limiting the analysis to single user Twitter threads and sufficiently long Reddit comments would have partially remedied the problems. However, this would have reduced the amount of data as well as shifted the focus away from conversations.\n",
     "\n",
-    "Secondly, there is a bias in the selection criteria between the platforms. As previously stated, NeurIPS and AAAI are top-level machine learning conferences, which makes many conversations about jargonic paper summarisation. R/machinelearning on the other hand generally has a more applied focus and a more junior user base. I tried to circumvent this by only scraping research-specific discussions.\n",
+    "Secondly, there is a bias in the selection criteria between the platforms. As previously stated, NeurIPS and AAAI are top-level machine learning conferences, which makes many \"conversations\" about jargonic paper summarisation threads. R/machinelearning on the other hand generally has a more applied focus and a more junior user base. I tried to circumvent this by only scraping research-specific discussions.\n",
     "\n",
     "Given the above factors, one should be careful with generalising the findings. A conservative claim is that machine learning _research_ discourse has a higher linguistic complexity on Twitter rather than Reddit. However, this does not necessarily generalise to other fields of research or types of machine learning discourse (e.g. discussions about practical applications). We also cannot draw any inferences about the causes of this difference. It is definitely also inappropriate to draw conclusions about \"science\" Twitter versus \"science\" Reddit as these terms cover heterogeneous scientific communities with different norms and interaction patterns. \n",
     "\n",
@@ -641,6 +635,8 @@
     "Mc Laughlin, G. H. (1969). SMOG grading-a new readability formula. Journal of Reading, 12(8), 639–646.\n",
     "\n",
     "Sainani, K. (2010). The importance of accounting for correlated observations. PM&R, 2(9), 858–861.\n",
+    "\n",
+    "Singer, P. (2022). CorrelationStats [Python]. https://github.com/psinger/CorrelationStats (Original work published 2013)\n",
     "\n",
     "Spearman, C. (1904). The Proof and Measurement of Association between Two Things. The American Journal of Psychology, 15(1), 72–101. https://doi.org/10.2307/1412159\n",
     "\n",
