--- a/assignments/Ch.10.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.10.Exercises-FSDS-MT222.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5c72619d-599d-4490-a9fa-49f5b41da94e",
    "metadata": {},
    "outputs": [],
@@ -63,28 +63,36 @@
     "from pathlib import Path\n",
     "from py7zr import unpack_7zarchive\n",
     "import shutil\n",
+    "import requests\n",
     "\n",
     "\n",
-    "stack = \"movies\"\n",
+    "stack = \"sustainability\"\n",
     "file_name = f\"{stack}.stackexchange.com.7z\"\n",
     "HTML_PATH = f\"https://archive.org/download/stackexchange/{file_name}\"\n",
     "\n",
     "DATA_DIR = Path().cwd().parent / \"data\"\n",
-    "export_path = data_dir / f\"{stack}\"\n",
+    "export_path = DATA_DIR / f\"{stack}\"\n",
     "\n",
     "if not export_path.exists(): \n",
-    "    export_path.mkdir()"
+    "    export_path.mkdir()\n",
+    "\n",
+    "r = requests.get(HTML_PATH, stream=True)\n",
+    "with open(DATA_DIR / file_name, 'wb') as f:\n",
+    "    f.write(r.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "3fd6a17e-a4bd-49a2-b064-2eb17318700e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.register_unpack_format('7zip', ['.7z'], unpack_7zarchive)\n",
-    "shutil.unpack_archive(data_dir / file_name, export_path)"
+    "try:\n",
+    "    shutil.register_unpack_format('7zip', ['.7z'], unpack_7zarchive)\n",
+    "except shutil.RegistryError:\n",
+    "    pass\n",
+    "shutil.unpack_archive(DATA_DIR / file_name, export_path)"
    ]
   },
   {
@@ -95,11 +103,11 @@
     "# Step 2. \n",
     "\n",
     "Refactor the code from Chapter 10 of the book into a function that works for the `posts.xml`. That function should take in the base data and then:\n",
-    "1. Convert the `int` variables (except where they start or end in `Id`) into integer values. \n",
-    "2. Convert the `datetime` variables. \n",
-    "3. Convert tags data from `str` into a `list`.\n",
-    "4. Create a separate column for `CleanBody` which is the `Body` without HTML. \n",
-    "5. Assign the HTML into a column as a list called `ListURL`.\n",
+    "1. Convert the `int` variables (except where they start or end in `Id`) into integer values.(CHECK)\n",
+    "2. Convert the `datetime` variables. (CHECK) \n",
+    "3. Convert tags data from `str` into a `list`. (CHECK)\n",
+    "4. Create a separate column for `CleanBody` which is the `Body` without HTML. (CHECK) \n",
+    "5. Assign the HTML into a column as a list called `ListURL`. (CHECK)\n",
     "6. Pickle that DataFrame with a coherent name, such as `f\"{stack}_Posts_cleaned.xml\"`.\n",
     "\n",
     "Notes: \n",
@@ -109,13 +117,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "id": "9a9af143-9354-41c0-b597-c2605043329e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Answer Step 2 below here \n",
-    "\n"
+    "import xmltodict\n",
+    "import pandas as pd\n",
+    "import functools\n",
+    "# import beautifulsoup4\n",
+    "import bs4\n",
+    "from typing import List, Optional\n",
+    "\n",
+    "def read_xml_rows(file_path: Path) -> dict:\n",
+    "    data_type = file_path.stem.lower()\n",
+    "    with open(file_path, \"rb\") as f:\n",
+    "        xml = f.read()\n",
+    "    xml = xmltodict.parse(xml)\n",
+    "    rows = xml[data_type][\"row\"]\n",
+    "    return rows\n",
+    "\n",
+    "def read_xml_rows_to_df(file_path: Path) -> pd.DataFrame:\n",
+    "    rows = read_xml_rows(file_path)\n",
+    "    return pd.DataFrame(rows)\n",
+    "\n",
+    "def id_cols_to_str(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    for col in df.columns:\n",
+    "        if col.endswith(\"Id\"):\n",
+    "            df[col] = df[col].astype(str)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def convert_numeric_to_int(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Check if column contains numbers and convert to int\"\"\"\n",
+    "    for col in df.columns:\n",
+    "        if not col.endswith(\"Id\"):\n",
+    "            try:\n",
+    "                df[col] = df[col].astype(int)\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "    return df\n",
+    "\n",
+    "def convert_date_cols(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    for col in df.columns:\n",
+    "        if col.endswith(\"Date\"):\n",
+    "            df[col] = pd.to_datetime(df[col])\n",
+    "    return df\n",
+    "\n",
+    "def tags_to_list(tags: Optional[str]) -> List[str]:\n",
+    "    \"turn <tag1><tag2>... into [tag1, tag2, ...]\"\n",
+    "    if not isinstance(tags, str):\n",
+    "        return []\n",
+    "    return tags.replace(\"><\", \",\").replace(\"<\", \"\").replace(\">\", \"\").split(\",\")\n",
+    "\n",
+    "def convert_tags(df: pd.DataFrame, tag_col: str=\"@Tags\") -> pd.DataFrame:\n",
+    "    df[tag_col] = df[tag_col].apply(tags_to_list)\n",
+    "    return df\n",
+    "\n",
+    "def get_url_from_html(html: str) -> List[str]:\n",
+    "    soup = bs4.BeautifulSoup(html, \"html.parser\")\n",
+    "    return [a[\"href\"] for a in soup.find_all(\"a\", href=True)]\n",
+    "\n",
+    "def create_url_col(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df[\"@ListURLs\"] = df[\"@Body\"].apply(get_url_from_html)\n",
+    "    return df\n",
+    "\n",
+    "def strip_html(text: str) -> str:\n",
+    "    return bs4.BeautifulSoup(text, \"html.parser\").get_text()\n",
+    "\n",
+    "def strip_html_df(df: pd.DataFrame, text_col: str=\"@Body\") -> pd.DataFrame:\n",
+    "    df[\"@CleanBody\"] = df[text_col].apply(strip_html)\n",
+    "    return df\n",
+    "\n",
+    "def remove_adds_from_cols(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Remove '@' from the column names\"\"\"\n",
+    "    df.columns = [col.replace(\"@\", \"\") for col in df.columns]\n",
+    "    return df\n",
+    "\n",
+    "def pickle_df(df: pd.DataFrame, file_path: Path) -> None:\n",
+    "    df.to_pickle(file_path)\n",
+    "\n",
+    "\n",
+    "def compose(*funcs):\n",
+    "    def inner(arg):\n",
+    "        return functools.reduce(lambda x, f: f(x), funcs, arg)\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "40dd1bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jhr\\Anaconda3\\envs\\sdspython\\lib\\site-packages\\bs4\\__init__.py:435: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\jhr\\Anaconda3\\envs\\sdspython\\lib\\site-packages\\bs4\\__init__.py:435: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def main():\n",
+    "    pipeline = compose(\n",
+    "        read_xml_rows_to_df, \n",
+    "        id_cols_to_str, \n",
+    "        convert_numeric_to_int, \n",
+    "        convert_date_cols, \n",
+    "        convert_tags, \n",
+    "        strip_html_df, \n",
+    "        create_url_col,\n",
+    "        remove_adds_from_cols,\n",
+    "    )\n",
+    "    posts = pipeline(DATA_DIR / f\"{stack}/Posts.xml\")\n",
+    "    # save to pickle\n",
+    "    pickle_df(posts, DATA_DIR / f\"{stack}_Posts_cleaned.pkl\")\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -146,13 +270,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "82483988-d134-46e9-875c-37233ac89e64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:29: FutureWarning: Passing a dict as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+      "  return df[schema]\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(int, errors=\"ignore\")\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Answer Step 3 below here \n",
-    "\n"
+    "import json\n",
+    "\n",
+    "def read_json(file_path: Path) -> dict:\n",
+    "    with open(file_path, \"r\") as f:\n",
+    "        return json.load(f)\n",
+    "    \n",
+    "schema_file = read_json(Path(\"../stackexchange_schema.json\"))\n",
+    "\n",
+    "def convert_int_cols(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    int_cols = [col for col, dtype in schema.items() if dtype == \"int\"]\n",
+    "    for col in int_cols:\n",
+    "        df[col] = df[col].astype(int, errors=\"ignore\")\n",
+    "    return df\n",
+    "\n",
+    "def convert_string_cols(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    str_cols = [col for col, dtype in schema.items() if dtype == \"str\"]\n",
+    "    for col in str_cols:\n",
+    "        df[col] = df[col].astype(str)\n",
+    "    return df\n",
+    "\n",
+    "def convert_date_cols(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    date_cols = [col for col, dtype in schema.items() if dtype == \"datetime\"]\n",
+    "    for col in date_cols:\n",
+    "        df[col] = pd.to_datetime(df[col])\n",
+    "    return df\n",
+    "\n",
+    "def choose_cols(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    return df[schema]\n",
+    "\n",
+    "def add_taglist(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    if not \"Tags\" in schema:\n",
+    "        return df\n",
+    "    elif \"TagList\" not in schema[\"Tags\"]:\n",
+    "        return df\n",
+    "    df[\"TagList\"] = df[\"Tags\"].apply(tags_to_list)\n",
+    "    return df\n",
+    "\n",
+    "def clean_html(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    if not \"Body\" in schema:\n",
+    "        return df\n",
+    "    elif \"CleanHTML\" not in schema[\"Body\"]:\n",
+    "        return df\n",
+    "    df[\"CleanHTML\"] = df[\"Body\"].apply(strip_html)\n",
+    "    return df\n",
+    "\n",
+    "def add_url_list(df: pd.DataFrame, schema: dict) -> pd.DataFrame:\n",
+    "    if not \"Body\" in schema:\n",
+    "        return df\n",
+    "    elif \"ListURL\" not in schema[\"Body\"]:\n",
+    "        return df\n",
+    "    df[\"ListURL\"] = df[\"Body\"].apply(get_url_from_html)\n",
+    "    return df\n",
+    "\n",
+    "def process_file(file_path: Path) -> None:\n",
+    "    data_type = file_path.stem\n",
+    "    schema = schema_file[data_type]\n",
+    "    \n",
+    "    basic_pipeline = compose(\n",
+    "        read_xml_rows_to_df,\n",
+    "        remove_adds_from_cols,\n",
+    "        functools.partial(choose_cols, schema=schema),\n",
+    "        functools.partial(convert_int_cols, schema=schema),\n",
+    "        functools.partial(convert_string_cols, schema=schema),\n",
+    "        functools.partial(convert_date_cols, schema=schema),\n",
+    "    )\n",
+    "    post_pipeline = compose(\n",
+    "        basic_pipeline,\n",
+    "        functools.partial(add_taglist, schema=schema),\n",
+    "        functools.partial(clean_html, schema=schema),\n",
+    "        functools.partial(add_url_list, schema=schema),\n",
+    "    )\n",
+    "\n",
+    "    if data_type == \"Posts\":\n",
+    "        df = post_pipeline(file_path)\n",
+    "    elif data_type == \"Users\":\n",
+    "        df = basic_pipeline(file_path)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown data type: {data_type}\")\n",
+    "    pickle_df(df, DATA_DIR / f\"{stack}_{data_type}_cleaned2.pkl\")\n",
+    "\n",
+    "process_file(DATA_DIR / f\"{stack}/Users.xml\")\n",
+    "df = pd.read_pickle(DATA_DIR / f\"{stack}_Users_cleaned2.pkl\")\n"
    ]
   },
   {
@@ -172,8 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer Step 4 below here\n",
-    "\n"
+    "# Answer Step 4 below here\n"
    ]
   },
   {
@@ -205,7 +430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('sdspython')",
    "language": "python",
    "name": "python3"
   },
@@ -219,9 +444,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "60612d6d4782d833a44515694e4bccfae5bb8e3209e7562cc1fda167f2433927"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
