--- a/assignments/Ch.10.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.10.Exercises-FSDS-MT222.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5c72619d-599d-4490-a9fa-49f5b41da94e",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "9a9af143-9354-41c0-b597-c2605043329e",
    "metadata": {},
    "outputs": [],
@@ -270,31 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "82483988-d134-46e9-875c-37233ac89e64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:29: FutureWarning: Passing a dict as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
-      "  return df[schema]\n",
-      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype(int, errors=\"ignore\")\n",
-      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_1260\\1162537027.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype(str)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Answer Step 3 below here \n",
     "import json\n",
@@ -351,6 +330,7 @@
     "    return df\n",
     "\n",
     "def process_file(file_path: Path) -> None:\n",
+    "    stack = file_path.parent.stem\n",
     "    data_type = file_path.stem\n",
     "    schema = schema_file[data_type]\n",
     "    \n",
@@ -377,8 +357,8 @@
     "        raise ValueError(f\"Unknown data type: {data_type}\")\n",
     "    pickle_df(df, DATA_DIR / f\"{stack}_{data_type}_cleaned2.pkl\")\n",
     "\n",
-    "process_file(DATA_DIR / f\"{stack}/Users.xml\")\n",
-    "df = pd.read_pickle(DATA_DIR / f\"{stack}_Users_cleaned2.pkl\")\n"
+    "#process_file(DATA_DIR / f\"{stack}/Users.xml\")\n",
+    "#df = pd.read_pickle(DATA_DIR / f\"{stack}_Users_cleaned2.pkl\")\n"
    ]
   },
   {
@@ -393,12 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "d5e2bd45-c7ae-444e-a391-9c733e7d32da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer Step 4 below here\n"
+    "# Answer Step 4 below here\n",
+    "def create_long_df(df: pd.DataFrame, col: str) -> pd.DataFrame:\n",
+    "    return df.explode(col).reset_index(drop=True)\n",
+    "\n",
+    "def create_long_df_from_cols(df: pd.DataFrame, cols: list) -> pd.DataFrame:\n",
+    "    for col in cols:\n",
+    "        df = create_long_df(df, col)\n",
+    "    return df\n",
+    "\n",
+    "clean_path = DATA_DIR / f\"{stack}_Posts_cleaned2.pkl\"\n",
+    "df = pd.read_pickle(clean_path)\n",
+    "all_df = create_long_df_from_cols(df, [\"TagList\", \"ListURL\"])\n",
+    "\n"
    ]
   },
   {
@@ -418,12 +410,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9f92e4e6-89ec-43ba-87da-6d64286e4b3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Try Challenge 2 below here \n",
+    "main_url = \"https://archive.org/download/stackexchange\"\n",
+    "\n",
+    "data = requests.get(main_url)\n",
+    "all_urls = get_url_from_html(data.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "305c6f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_22892\\101718653.py:29: FutureWarning: Passing a dict as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+      "  return df[schema]\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_22892\\101718653.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(int, errors=\"ignore\")\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_22892\\101718653.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(str)\n",
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_22892\\101718653.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = pd.to_datetime(df[col])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def match_stackexhange(url: str) -> str:\n",
+    "    \"\"\"\n",
+    "    match urls of the form '\\w+.stackexchange.com.7z$'\n",
+    "    \"\"\"\n",
+    "    match = re.search(r\"^\\w+.stackexchange.com.7z$\", url)\n",
+    "    text = match.group(0) if match else None\n",
+    "    if text:\n",
+    "        return text[:text.find(\".\")]\n",
+    "    else:\n",
+    "        return None\n",
+    "stackexhange_urls = [match_stackexhange(url) for url in all_urls if match_stackexhange(url)]\n",
+    "\n",
+    "def download_stackexchange(stack: str) -> None:\n",
+    "    if stack not in stackexhange_urls:\n",
+    "        raise ValueError(f\"Unknown stackexchange: {stack}\")\n",
+    "    url = f\"{main_url}/{stack}.stackexchange.com.7z\"\n",
+    "    # if file exists then skip\n",
+    "    if (DATA_DIR / f\"{stack}.stackexchange.com.7z\").exists():\n",
+    "        return None\n",
+    "    print(f\"Downloading {stack} from {url}\")\n",
+    "    data = requests.get(url)\n",
+    "    # check if data is valid\n",
+    "    with open(DATA_DIR / f\"{stack}.stackexchange.com.7z\", \"wb\") as f:\n",
+    "        f.write(data.content)\n",
+    "    \n",
+    "def unpack_stackexchange(stack: str) -> None:\n",
+    "    if next((DATA_DIR / stack).iterdir(), None):\n",
+    "        return None\n",
+    "    filename = DATA_DIR / f\"{stack}.stackexchange.com.7z\"\n",
+    "    if not filename.exists():\n",
+    "        raise ValueError(f\"File not found: {filename}\")\n",
+    "    print(f\"Unpacking {filename}\")\n",
+    "    shutil.unpack_archive(filename, DATA_DIR / stack)\n",
+    "\n",
+    "def download_and_unpack(stack: str) -> None:\n",
+    "    download_stackexchange(stack)\n",
+    "    unpack_stackexchange(stack)\n",
+    "\n",
+    "def interactive_process() -> None:\n",
+    "    while True:\n",
+    "        newstack = input(\"Enter stackexchange name: \")\n",
+    "        try:\n",
+    "            download_and_unpack(stack)\n",
+    "            newdata_type = input(\"Enter data type: \")\n",
+    "            if newdata_type not in [\"Posts\", \"Users\"]:\n",
+    "                raise ValueError(f\"Unknown data type: {newdata_type}\")\n",
+    "            process_file(DATA_DIR / f\"{newstack}/{newdata_type}.xml\")\n",
+    "            print(\"Done\")\n",
+    "            break\n",
+    "        except ValueError as e:\n",
+    "            print(e)\n",
+    "            print(\"Try again\")\n",
+    "            continue\n",
+    "        except KeyboardInterrupt:\n",
+    "            break\n",
+    "\n",
+    "interactive_process()\n",
     "\n"
    ]
   }
